--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,54 +1,53 @@
+/* Estilos da Pagina Index*/
 
-.menu li{
-    padding: 16px;
-    list-style: none;
-    display: inline-flex;
+#menu li{
+    display: inline;
+    padding: 120px;  
 }
 
-.alinharCentro div{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: row;
+#menu li a{
+    text-decoration: none;
 }
-.alinharCentro{
-    background-image: linear-gradient(gray,white) ;
+#menu a:hover{
+    color: gray;
 }
-.titulos{
-    text-align: center;
+
+.p-30{
     padding: 30px;
 }
 
-.button{
-    border: NONE;
-    padding: 15px 32PX;
+.center {
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 18px;
-    margin: 4px 50px;
-    cursor: pointer;
+    
 }
-.container{
+
+.container {
     display: flex;
-    flex-flow: row ;
-    justify-content: flex-start;
+    flex-flow: row;
+    justify-content: center;
     align-items: center;
 }
-.container div{
+
+.borderImg{
+    border-top-left-radius: 25%;
+    border-bottom-right-radius: 25%;
+}
+.img {
+    height: 400px;
+    width: 600px;
     padding: 1%;
 }
 
-.texto{
-    text-indent: 2em;
-    background-color: rgb(251, 252, 253);
-    font-style: normal;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.tm-social{
+    height: 50px;
+    width: 50px;
+}
+.mb-50{
+    margin-bottom: 50px;
 }
 
-.gifinicial{
-    padding-top:30%;
-    align-items: center;
-    position:relative;
-    justify-content: center;
+/* Estilos da pagina Contato */
+
+.ml-50 {
+    margin-left: 50px;
 }
