--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -13,11 +13,12 @@
 }
 
 .p-30{
-    padding: 30px;
+    padding: 25px;
 }
 
 .center {
     text-align: center;
+    width: 90%;
     
 }
 
@@ -31,11 +32,11 @@
 .borderImg{
     border-top-left-radius: 25%;
     border-bottom-right-radius: 25%;
+    
 }
 .img {
-    height: 400px;
-    width: 600px;
-    padding: 1%;
+    height: auto;
+    width: 100%;
 }
 
 .tm-social{
@@ -45,6 +46,12 @@
 .mb-50{
     margin-bottom: 50px;
 }
+.body-back {
+    background-color: gray;
+    background-image: linear-gradient(gray, white, gray);
+    background-repeat: repeat-x;
+}
+
 
 /* Estilos da pagina Contato */
 
